--- a/modules/aft-customizations/buildspecs/aft-global-customizations-terraform.yml
+++ b/modules/aft-customizations/buildspecs/aft-global-customizations-terraform.yml
@@ -59,7 +59,7 @@ phases:
       # Mark helper scripts as executable
       - chmod +x $DEFAULT_PATH/api_helpers/pre-api-helpers.sh
       - chmod +x $DEFAULT_PATH/api_helpers/post-api-helpers.sh
-      
+
   pre_build:
     on-failure: ABORT
     commands:
@@ -98,6 +98,30 @@ phases:
           export AWS_PROFILE=aft-management-admin
           /opt/aft/bin/terraform init -no-color
           /opt/aft/bin/terraform apply -no-color --auto-approve
+        elif [ $TF_DISTRIBUTION = "tofu" ]; then
+          TF_BACKEND_REGION=$(aws ssm get-parameter --name "/aft/config/oss-backend/primary-region" --query "Parameter.Value" --output text)
+          TF_KMS_KEY_ID=$(aws ssm get-parameter --name "/aft/config/oss-backend/kms-key-id" --query "Parameter.Value" --output text)
+          TF_DDB_TABLE=$(aws ssm get-parameter --name "/aft/config/oss-backend/table-id" --query "Parameter.Value" --output text)
+          TF_S3_BUCKET=$(aws ssm get-parameter --name "/aft/config/oss-backend/bucket-id" --query "Parameter.Value" --output text)
+          TF_S3_KEY=$VENDED_ACCOUNT_ID-aft-global-customizations/terraform.tfstate
+
+          cd /tmp
+          echo "Installing OpenTofu"
+          curl --proto '=https' --tlsv1.2 -fsSL https://get.opentofu.org/install-opentofu.sh -o install-opentofu.sh
+          chmod +x install-opentofu.sh
+          ./install-opentofu.sh --install-method standalone
+          rm -f install-opentofu.sh
+          tofu -no-color --version
+
+          # Move back to customization module
+          cd $DEFAULT_PATH/terraform
+          for f in *.jinja; do jinja2 $f -D timestamp="$TIMESTAMP" -D tf_distribution_type=$TF_DISTRIBUTION -D provider_region=$CT_MGMT_REGION -D region=$TF_BACKEND_REGION -D aft_admin_role_arn=$AFT_EXEC_ROLE_ARN -D target_admin_role_arn=$VENDED_EXEC_ROLE_ARN -D bucket=$TF_S3_BUCKET -D key=$TF_S3_KEY -D dynamodb_table=$TF_DDB_TABLE -D kms_key_id=$TF_KMS_KEY_ID -D tf_version=$TF_VERSION >> ./$(basename $f .jinja).tf; done
+          for f in *.tf; do echo "\n \n"; echo $f; cat $f; done
+
+          cd $DEFAULT_PATH/terraform
+          export AWS_PROFILE=aft-management-admin
+          tofu init -no-color
+          tofu apply -no-color --auto-approve
         else
           TF_ORG_NAME=$(aws ssm get-parameter --name "/aft/config/terraform/org-name" --query "Parameter.Value" --output text)
           TF_TOKEN=$(aws ssm get-parameter --name "/aft/config/terraform/token" --with-decryption --query "Parameter.Value" --output text)
