include tofu version

--- a/modules/aft-code-repositories/buildspecs/ct-aft-account-provisioning-customizations.yml
+++ b/modules/aft-code-repositories/buildspecs/ct-aft-account-provisioning-customizations.yml
@@ -71,7 +71,7 @@ phases:
           # unzip -o terraform_${TF_VERSION}_linux_amd64.zip && mv terraform /usr/bin
           curl --proto '=https' --tlsv1.2 -fsSL https://get.opentofu.org/install-opentofu.sh -o install-opentofu.sh
           chmod +x install-opentofu.sh
-          ./install-opentofu.sh --install-method standalone
+          ./install-opentofu.sh --install-method standalone --opentofu-version 1.10.0
           rm -f install-opentofu.sh
           tofu -no-color --version
           cd $DEFAULT_PATH/terraform
